# Authorizer

./: .classpath  .gitignore  .hgignore  .project  .travis.yml  AndroidAssetStudio-NOTICE.txt  AndroidManifest.xml  LICENSES  PRIVACY.md  README.md  android-NOTICE.txt  build.gradle  build.xml  gradle.properties  lint.xml  settings.gradle
.externalToolBuilders/: Generate Revision.launch
authorizer/: build.gradle  lint.xml  proguard-rules-debug.pro  proguard-rules-test.pro  proguard-rules.pro
authorizer/src/main/cpp/: CMakeLists.txt  PasswdSafe.cpp  Util.cpp  Util.h  org_pwsafe_lib_crypto_SHA256Pws.h  sha256.cpp  sha256.h
box-lib/: .project  AndroidManifest.xml
doc/: formatV3.txt  onedrive.xcf  pwsafe.xcf
lib/: .project  AndroidManifest.xml  ant.properties  build-rev.xml  build.gradle  build.xml  common_rules.xml  lint.xml
lib-box/: .project  AndroidManifest.xml  build.gradle  build.xml  gradle.properties  lint.xml  proguard-rules.pro
lib-onedrive/: LICENSE  README.md  THIRD PARTY NOTICES  build.gradle
lib-owncloud/: .project  build.gradle  build.xml
lib-play/: .project  AndroidManifest.xml  build.gradle  build.xml  lint.xml  proguard-shrink.txt
lib-v7app/: .project  build.xml
passwdsafe/: .classpath  .cproject  .project  AndroidManifest.xml  build.gradle  build.xml  lint.xml  project.properties
releases/: PasswdSafe-1.3.0.apk  PasswdSafe-1.4.0.apk  PasswdSafe-1.5.0.apk  PasswdSafe-2.0.0.apk  PasswdSafe-2.1.0.apk  PasswdSafe-2.1.1.apk  PasswdSafe-2.1.2.apk  PasswdSafe-2.2.0.apk  PasswdSafe-2.2.1.apk  PasswdSafe-2.3.0.apk  PasswdSafe-2.3.1.apk  (+90 more)
(+1665 files in other folders)
